Adjust spacing